platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: vroom
  labels:
    kargo.akuity.io/project: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: vroom-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: vroom-staging
  labels:
    env: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: vroom-prod
  labels:
    env: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: vroom-kargo
  labels:
    component: kargo
